module(name = "iso14229")

bazel_dep(name = "platforms", version="1.0.0")
bazel_dep(name = "rules_python", version = "1.8.2")
bazel_dep(name = "rules_shell", version="0.6.1")
bazel_dep(name = "rules_cc", version="0.2.16")
bazel_dep(name = "toolchains_llvm", version = "1.4.0")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    # https://github.com/hedronvision/bazel-compile-commands-extractor/pull/278
    commit = "7fe1eab26d2b8eeb5e1c6a2f38bddb001e3f9696",
)

http_archive(
    name = "cmocka",
    url = "https://cmocka.org/files/1.1/cmocka-1.1.7.tar.xz",
    sha256 = "810570eb0b8d64804331f82b29ff47c790ce9cd6b163e98d47a4807047ecad82",
    build_file = "//test:cmocka.BUILD",
    strip_prefix = "cmocka-1.1.7",
)

http_archive(
    name = "s32k_sdk",
    url = "https://www.keil.com/pack/Keil.S32_SDK_DFP.1.5.0.pack",
    sha256 = "95f7649aee66deb656cc999f300663544113245aecd407cfc90548377355353b",
    type = "zip",
    build_file = "//platforms:s32k_sdk.BUILD",
)

http_archive(
    name = "CMSIS",
    build_file = "//platforms:cmsis.BUILD",
    sha256 = "14b366f2821ee5d32f0d3bf48ef9657ca45347261d0531263580848e9d36f8f4",
    urls = ["http://www.keil.com/pack/ARM.CMSIS.5.9.0.pack"],
    type = ".zip",
)


# Chromium sysroot (Debian Bullseye) - includes isotp headers
http_archive(
    name = "org_chromium_sysroot_linux_x64",
    build_file_content = """
filegroup(
  name = "sysroot",
  srcs = glob(["*/**"], exclude=["**/*\\\\*"]),
  visibility = ["//visibility:public"],
)
""",
    sha256 = "36a164623d03f525e3dfb783a5e9b8a00e98e1ddd2b5cff4e449bd016dd27e50",
    urls = ["https://commondatastorage.googleapis.com/chrome-linux-sysroot/36a164623d03f525e3dfb783a5e9b8a00e98e1ddd2b5cff4e449bd016dd27e50"],
    type = "tar.xz",
)


# Configure and register the toolchain.
git_override(
  module_name = "toolchains_llvm",
  commit = "ace6215bbfe8a76884646b2458b42380e2201607",
  remote = "https://github.com/bazel-contrib/toolchains_llvm",
)
llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(
    name="llvm_toolchain",
    llvm_version = "19.1.0",
)
llvm.sysroot(
    name = "llvm_toolchain",
    label = "@org_chromium_sysroot_linux_x64//:sysroot",
    targets = ["linux-x86_64"],
)
use_repo(llvm, "llvm_toolchain")


bazel_dep(name = "rules_fuzzing", version = "0.6.0")
